# google-docs-mcp-docker

./: .gitignore  CLAUDE.md  Dockerfile  INTEGRATION_SUMMARY.md  README.md  docker-compose.devcontainer.yml  docker-compose.yml  package-lock.json  pyproject.toml
.claude/commands/: build.md  commitpush.md
.devcontainer/: devcontainer.json
src/: auth.ts  googleDocsApiHelpers.ts
src/google_docs_mcp/: __init__.py  auth.py  server.py  types.py
src/google_docs_mcp/api/: __init__.py  comments.py  documents.py  drive.py  helpers.py  resources.py
src/google_docs_mcp/utils/: __init__.py  docker.py
tests/: __init__.py  conftest.py  test_bulk_operations.py  test_bulk_style_operations.py  test_drive_permissions.py  test_google_drive_urls.py  test_helpers.py  test_image_url_validation.py  test_native_markdown.py  test_new_bulk_prep_functions.py  test_new_helpers.py  test_port_discovery.py  test_types.py
